fix div being stretched by comment section

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -87,6 +87,7 @@
 
     > :first-child {
       flex: 1;
+      max-width: 100%;
     }
 
     @media (min-width: $breakpoint-medium) {
